# home-assistant-filter-log

./: README.md  pyproject.toml
src/home_assistant_filter_log/: __init__.py  main.py
tests/: __init__.py  test_main.py
