[project]
name = "home-assistant-filter-log"
version = "0.1.0"
description = "A Python utility that filters Home Assistant log files and outputs JSON"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "dbwalker0min"}
]
dependencies = []

[project.scripts]
home-assistant-filter-log = "home_assistant_filter_log.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_assistant_filter_log"]
